--- a/css/style.css
+++ b/css/style.css
@@ -1322,7 +1322,7 @@ html body main .ad .single-item button.slick-next::after {
 html body .sideBar .download {
   position: fixed;
   left: 0px;
-  top: 195px;
+  top: 215px;
   z-index: 1;
   width: 60px;
   height: 190px;
@@ -1354,19 +1354,14 @@ html body .sideBar .download i {
 html body .sideBar .rightSide {
   position: fixed;
   right: 0px;
-  top: 195px;
+  top: 215px;
   z-index: 1;
   width: 60px;
   height: auto;
-  border-radius: 35px;
-  padding: 20px 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#3179ff), to(#784dff));
-  background: linear-gradient(#3179ff, #784dff);
-  color: #ffffff;
 }
 html body .sideBar .rightSide li {
-  width: 100%;
-  height: 40px;
+  width: 58px;
+  height: 58px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1377,8 +1372,12 @@ html body .sideBar .rightSide li {
       -ms-flex-pack: center;
           justify-content: center;
   font-size: 20px;
-  padding-bottom: 8px;
   cursor: pointer;
+  border-radius: 35px;
+  margin-bottom: 10px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#3179ff), to(#784dff));
+  background: linear-gradient(#3179ff, #784dff);
+  color: #ffffff;
 }
 html body .sideBar .rightSide li i {
   width: 30px;
@@ -1406,7 +1405,7 @@ html body .mainWrap .center .typeList {
 html body .mainWrap .center .typeList li {
   width: auto;
   height: auto;
-  margin: 0 22px 36px 0;
+  margin: 0 22px 12px 0;
   position: relative;
   cursor: pointer;
 }
@@ -1467,6 +1466,10 @@ html body footer .footerList .center ul li {
 html body footer .footerList .center ul li:hover, html body footer .footerList .center ul li:active, html body footer .footerList .center ul li.active {
   background: #3d4cce;
 }
+html body footer .footerList .center ul li:hover:nth-of-type(5), html body footer .footerList .center ul li:active:nth-of-type(5), html body footer .footerList .center ul li.active:nth-of-type(5) {
+  background: none;
+  cursor: context-menu;
+}
 html body footer .footerList .center ul li.title {
   margin-bottom: 24px;
   font-size: 14px;
@@ -1478,6 +1481,13 @@ html body footer .footerList .center ul li p {
   font-size: 13px;
   opacity: 0.7;
   margin-bottom: 10px;
+}
+html body footer .footerList .center ul .pright {
+  position: relative;
+  left: 728px;
+  background: none;
+  font-size: 14px;
+  letter-spacing: 1px;
 }
 html body footer .footerList .footer-site .center-wrap {
   text-align: center;
@@ -2198,8 +2208,8 @@ html body .gameWrap .content .center {
           box-sizing: border-box;
 }
 html body .gameWrap .content .textBox {
-  width: 684px;
-  height: 615px;
+  width: 695px;
+  height: 585px;
 }
 html body .gameWrap .content .textBox .title {
   display: -webkit-box;
