--- a/scss/_sideBar.scss
+++ b/scss/_sideBar.scss
@@ -3,7 +3,7 @@
     .download {
         position: fixed;
         left: 0px;
-        top: 195px;
+        top: 215px;
         z-index: 1;
         width: 60px;
         height: 190px;
@@ -27,23 +27,23 @@
     .rightSide {
         position: fixed;
         right: 0px;
-        top: 195px;
+        top: 215px;
         z-index: 1;
         width: 60px;
         height: auto;
-        border-radius: 35px;
-        padding: 20px 0;
-        @include sideBar;
 
         li {
-            width: 100%;
-            height: 40px;
+            width: 58px;
+            height: 58px;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 20px;
-            padding-bottom: 8px;
             cursor: pointer;
+            border-radius: 35px;
+            margin-bottom: 10px;
+            @include sideBar;
+
 
             i {
                 width: 30px;
