--- a/scss/_jumpWindow.scss
+++ b/scss/_jumpWindow.scss
@@ -309,6 +309,10 @@
         }
 
         &.passwordWindow {
+            display: none;
+            &.display {
+                display: block;
+            }
 
             form {
                 
